<resources>
    <string name="app_name">RecycleBuy</string>
    <string name="loading">loading</string>
    <string name="cancel">CANCEL</string>
    <string name="tip_service_from">carbon point</string>
    <string name="register">Register</string>
    <string name="login">LogIn</string>
    <string name="home">Home</string>
    <string name="share">Publish</string>
    <string name="my">My</string>
    <string name="information">Information</string>
    <string name="ShoppingCart">ShoppingCart</string>
    <string name="tip_please_input_password">please enter the password</string>
    <string name="please_input_phone">please enter phone number</string>
    <string name="phone_cannot_empty">phone number can not be blank</string>
    <string name="password_cannot_empty">password can not be blank</string>
    <string name="waiting_login">logging in..</string>
    <string name="login_success">LOGIN SUCCESSFUL.</string>
    <string name="password_error">WRONG PASSWORD.</string>
    <string name="login_error">SORRY_LOGIN_FAILED_PLEASE_TRY_AGAIN_LATER</string>
    <string name="title_register">NewUserRegistration</string>
    <string name="user_name">Nickname</string>
    <string name="password">Password</string>
    <string name="phone">MobilePhoneNumber</string>
    <string name="sex">Sex</string>
    <string name="tip_register">register</string>
    <string name="age">Age</string>
    <string name="user_name_cannot_empty">USERNAME CAN NOT BE BLANK</string>
    <string name="phone_is_not_right">Phone number format is incorrect.</string>
    <string name="password_is_not_safe">The password length is less than 6 digits, which is not safe.</string>
    <string name="tip_is_register_state">Registering.</string>
    <string name="user_has_exists">User already exists.</string>
    <string name="register_success">REGISTRATION_SUCCESS.</string>
    <string name="register_failed">REGISTRATION_FAILED_PLEASE_TRY_AGAIN.</string>
    <string name="user_not_register">THE_PHONE_NUMBER_IS_NOT_REGISTERED.</string>
    <string name="tip_click_more_exit">Press again to exit the app</string>
    <string name="current_no_data">NO DATA</string>
    <string name="shop">Shop</string>
    <string name="my_order">My Order</string>
    <string name="sign_in">Sing in</string>
    <string name="profile_info">PersonalInformation</string>
    <string name="seller_center">seller center</string>
    <string name="setting">Setting</string>
    <string name="inctegral">inctegral</string>
    <string name="points_sign_in">points sign in</string>
    <string name="task">task</string>
    <string name="orig_price">orig price：</string>
    <string name="current_price">current price：</string>
    <string name="kucun">in stock：</string>
    <string name="shop_post">Commodity release</string>
    <string name="input_shop_name_please">Please enter the product name</string>
    <string name="shop_description">product description</string>
    <string name="please_input_shop_description">Please introduce the product in detail</string>
    <string name="price">PRICE:</string>
    <string name="please_input_price">Please enter the product price.</string>
    <string name="please_input_kucun">Please enter the current product inventory</string>
    <string name="shop_video_info">Video introduction</string>
    <string name="shop_cover_info">Commodity related pictures</string>
    <string name="title_cannot_empty">Product name cannot be empty.</string>
    <string name="message_cannot_empty">Product description cannot be empty.</string>
    <string name="price_cannot_empty">Commodity price cannot be empty.</string>
    <string name="kucun_cannot_empty">Inventory cannot be empty.</string>
    <string name="shop_post_ing">Product release.</string>
    <string name="shop_post_success">shop post success.</string>
    <string name="shop_post_failed">shop post failed.</string>
    <string name="info_post_success">info post success.</string>
    <string name="info_post_failed">info post failed.</string>
    <string name="done">DONE</string>
    <string name="next">NEXT</string>
    <string name="picture">PICTURE</string>
    <string name="camera">CAMERA</string>
    <string name="video">[VIDEO]</string>
    <string name="video_size_than_max">Sorry, the uploaded video file cannot exceed 30M.</string>
    <string name="file_upload_failed">Image upload failed.</string>
    <string name="shop_name">product name</string>
    <string name="xiaoliang">Sales</string>
    <string name="no_data">No data found.</string>
    <string name="update">updating..</string>
    <string name="update_failed">Update failed..</string>
    <string name="update_success">update completed.</string>
    <string name="delete_shop">Under shelf.</string>
    <string name="delete_shop_success">Successfully removed.</string>
    <string name="delete_shop_failed">Failed to remove.</string>
    <string name="buy_info">Confirm Order</string>
    <string name="error">Loading error.</string>
    <string name="pay_for">Payments.</string>
    <string name="points">integral</string>
    <string name="description">Signature</string>
    <string name="address_title">Shipping address</string>
    <string name="update_tile">renew</string>
    <string name="change_userInfo">Update personal information</string>
    <string name="update_ing">updating.</string>
    <string name="tip_unknow_error">unknown mistake</string>
    <string name="update_password">change Password</string>
    <string name="sure_password_again">Confirm the new password</string>
    <string name="setting_password">Set your new password</string>
    <string name="your_old_password">Your original password</string>
    <string name="old_password_cannot_empty">The original password cannot be empty.</string>
    <string name="new_password_cannot_empty">New password cannot be empty.</string>
    <string name="new_password_not_equals">Two password entries are inconsistent</string>
    <string name="old_password_not_right">The original password is incorrectly entered</string>
    <string name="password_to_simple">For your account security, the password length cannot be less than 6 digits</string>
    <string name="tip">TIP</string>
    <string name="tip_exit_current_current">Whether to log out of the current account？</string>
    <string name="exit">EXIT</string>
    <string name="no_thx">Not yet</string>
    <string name="qiandao">Sign in.....</string>
    <string name="qiandao_title">Sign in</string>
    <string name="add_cart">Adding</string>
    <string name="cart">cart</string>
    <string name="favorite">favorite</string>
    <string name="delete">DELETE</string>
    <string name="del_success">successfully deleted</string>
    <string name="del_failed">failed to delete</string>
    <string name="points_detail">Points revenue and expenditure details</string>
    <string name="address">ADDRESS</string>
    <string name="address_cannot_empty">Address cannot be empty.</string>
    <string name="address_is_emoty">The delivery address cannot be empty..</string>
    <string name="phone_is_empty">Phone number can not be blank..</string>
    <string name="username_is_empty">username can not be blank..</string>
    <string name="man">MAN</string>
    <string name="woman">WOMAN</string>
    <string name="pay_failed">Payment failed.</string>
    <string name="pay_success">Payment success.</string>
    <string name="points_is_not_more">Insufficient balance..</string>
    <string name="tip_kuncun">in stock:</string>
    <string name="buy_tip">BUY</string>
    <string name="seller_shop_tip">Merchandise for sale</string>
    <string name="buy_count_max">Purchase more than inventory</string>
    <string name="detail_tip">detail</string>
    <string name="shop_detail_tip">ProductDetails</string>
    <string name="qiandao_points_tip">SIGN IN TO EARN POINTS：</string>
    <string name="has_qiandao">CHECKED IN</string>
    <string name="already_qiandao">Signed in today, please come back tomorrow~</string>
    <string name="shop_video_title">Product video introduction</string>
    <string name="add_cart_failed">ADD TO CART FAILED.</string>
    <string name="add_cart_success">ADD TO CART SUCCESSFULLY.</string>
    <string name="price_tip">Price:</string>
    <string name="buy_shop_count_tip">Purchase quantity</string>
    <string name="cast_points_tip">consumption:</string>
    <string name="sales_count_tip">Sales:</string>
    <string name="buy_now">BuyNow</string>
    <string name="total_points_info">total</string>
    <string name="buy_count_title">NumberOfPurchases</string>
    <string name="service_info">Service guarantee • Genuine guarantee • After-sales service</string>
    <string name="shop_detail">product_details</string>
    <string name="xiajia">OFF SHELF</string>
    <string name="update_title">replace</string>
    <string name="add_cart_tip">Add shopping cart</string>
    <string name="kucun_no_more">INSUFFICIENT CURRENT PRODUCT INVENTORY.</string>
    <string name="kucun_empty">INVENTORY SHORTAGE</string>
    <string name="green">Points collection</string>
    <string name="info_detail_tip">Information</string>
    <string name="release_news">release news</string>
    <string name="info_post">INFO POST</string>
</resources>