<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <com.zmonster.recyclebuy.view.FontEditText
        android:id="@+id/edit_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounder_panel_grey_bg"
        android:hint="@string/your_old_password"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:textColor="@color/black_black_middle"
        android:textSize="13sp" />

    <com.zmonster.recyclebuy.view.FontEditText
        android:id="@+id/edit_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@drawable/rounder_panel_grey_bg"
        android:hint="@string/setting_password"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:textColor="@color/black_black_middle"
        android:textSize="13sp" />

    <com.zmonster.recyclebuy.view.FontEditText
        android:id="@+id/edit_new_password_agin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounder_panel_grey_bg"
        android:hint="@string/sure_password_again"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:textColor="@color/black_black_middle"
        android:textSize="13sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="40dp"
        android:background="@color/barTint"
        android:text="@string/update_tile"
        android:textColor="@color/white"
        android:textSize="13sp" />

</LinearLayout>